--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
     implementation 'com.squareup.okhttp3:okhttp:3.14.1'
     implementation "com.google.firebase:firebase-messaging:17.3.3"
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
 
 
     implementation 'com.github.bumptech.glide:glide:4.8.0'
